# substrate-blockchain-test

./: Cargo.toml  README.md
runtime/src/: custom_template.rs  template.rs
runtime/wasm/: Cargo.toml
src/: main.rs
substrate-test/: README.md
substrate-test/runtime/: Cargo.toml
substrate-test/runtime/src/: lib.rs  template.rs
substrate-test/runtime/wasm/: build.sh
substrate-test/runtime/wasm/src/: lib.rs
substrate-test/src/: chain_spec.rs  main.rs  service.rs
