[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['substrate-test-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-test-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-test-runtime]
default-features = false
path = '..'
